feat: implement dashboard api